cmake_minimum_required(VERSION 3.3)
project(bluez_4_101)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    alert/main.c
    alert/server.c
    alert/server.h
    attrib/att-database.h
    attrib/att.c
    attrib/att.h
    attrib/client.c
    attrib/client.h
    attrib/gatt-service.c
    attrib/gatt-service.h
    attrib/gatt.c
    attrib/gatt.h
    attrib/gattrib.c
    attrib/gattrib.h
    attrib/gatttool.c
    attrib/gatttool.h
    attrib/interactive.c
    attrib/utils.c
    audio/a2dp-codecs.h
    audio/a2dp.c
    audio/a2dp.h
    audio/avctp.c
    audio/avctp.h
    audio/avdtp.c
    audio/avdtp.h
    audio/avrcp.c
    audio/avrcp.h
    audio/control.c
    audio/control.h
    audio/ctl_bluetooth.c
    audio/device.c
    audio/device.h
    audio/gateway.c
    audio/gateway.h
    audio/gsta2dpsink.c
    audio/gsta2dpsink.h
    audio/gstavdtpsink.c
    audio/gstavdtpsink.h
    audio/gstbluetooth.c
    audio/gstpragma.h
    audio/gstrtpsbcpay.c
    audio/gstrtpsbcpay.h
    audio/gstsbcdec.c
    audio/gstsbcdec.h
    audio/gstsbcenc.c
    audio/gstsbcenc.h
    audio/gstsbcparse.c
    audio/gstsbcparse.h
    audio/gstsbcutil.c
    audio/gstsbcutil.h
    audio/headset.c
    audio/headset.h
    audio/ipc.c
    audio/ipc.h
    audio/main.c
    audio/manager.c
    audio/manager.h
    audio/media.c
    audio/media.h
    audio/pcm_bluetooth.c
    audio/rtp.h
    audio/sink.c
    audio/sink.h
    audio/source.c
    audio/source.h
    audio/telephony-dummy.c
    audio/telephony-maemo5.c
    audio/telephony-maemo6.c
    audio/telephony-ofono.c
    audio/telephony.c
    audio/telephony.h
    audio/transport.c
    audio/transport.h
    audio/unix.c
    audio/unix.h
    btio/btio.c
    btio/btio.h
    compat/bnep.c
    compat/dun.c
    compat/dund.c
    compat/dund.h
    compat/fakehid.c
    compat/hidd.c
    compat/hidd.h
    compat/lib.h
    compat/msdun.c
    compat/pand.c
    compat/pand.h
    compat/sdp.c
    compat/sdp.h
    cups/cups.h
    cups/hcrp.c
    cups/main.c
    cups/sdp.c
    cups/spp.c
    deviceinfo/deviceinfo.c
    deviceinfo/deviceinfo.h
    deviceinfo/main.c
    deviceinfo/manager.c
    deviceinfo/manager.h
    emulator/btdev.c
    emulator/btdev.h
    emulator/main.c
    emulator/server.c
    emulator/server.h
    emulator/vhci.c
    emulator/vhci.h
    gdbus/gdbus.h
    gdbus/mainloop.c
    gdbus/object.c
    gdbus/polkit.c
    gdbus/watch.c
    health/hdp.c
    health/hdp.h
    health/hdp_main.c
    health/hdp_manager.c
    health/hdp_manager.h
    health/hdp_types.h
    health/hdp_util.c
    health/hdp_util.h
    health/mcap.c
    health/mcap.h
    health/mcap_internal.h
    health/mcap_lib.h
    health/mcap_sync.c
    input/device.c
    input/device.h
    input/fakehid.c
    input/fakehid.h
    input/main.c
    input/manager.c
    input/manager.h
    input/server.c
    input/server.h
    lib/bluetooth/a2mp.h
    lib/bluetooth/bluetooth.h
    lib/bluetooth/bnep.h
    lib/bluetooth/cmtp.h
    lib/bluetooth/hci.h
    lib/bluetooth/hci_lib.h
    lib/bluetooth/hidp.h
    lib/bluetooth/l2cap.h
    lib/bluetooth/mgmt.h
    lib/bluetooth/rfcomm.h
    lib/bluetooth/sco.h
    lib/bluetooth/sdp.h
    lib/bluetooth/sdp_lib.h
    lib/bluetooth/uuid.h
    lib/a2mp.h
    lib/bluetooth.c
    lib/bluetooth.h
    lib/bnep.h
    lib/cmtp.h
    lib/hci.c
    lib/hci.h
    lib/hci_lib.h
    lib/hidp.h
    lib/l2cap.h
    lib/mgmt.h
    lib/rfcomm.h
    lib/sco.h
    lib/sdp.c
    lib/sdp.h
    lib/sdp_lib.h
    lib/uuid.c
    lib/uuid.h
    mgmt/main.c
    monitor/bt.h
    monitor/btsnoop.c
    monitor/btsnoop.h
    monitor/control.c
    monitor/control.h
    monitor/hcidump.c
    monitor/hcidump.h
    monitor/main.c
    monitor/mainloop.c
    monitor/mainloop.h
    monitor/packet.c
    monitor/packet.h
    network/common.c
    network/common.h
    network/connection.c
    network/connection.h
    network/main.c
    network/manager.c
    network/manager.h
    network/server.c
    network/server.h
    plugins/adaptername.c
    plugins/dbusoob.c
    plugins/external-dummy.c
    plugins/formfactor.c
    plugins/gatt-example.c
    plugins/hal.c
    plugins/hciops.c
    plugins/maemo6.c
    plugins/mgmtops.c
    plugins/pnat.c
    plugins/service.c
    plugins/storage.c
    plugins/wiimote.c
    proximity/immalert.c
    proximity/immalert.h
    proximity/linkloss.c
    proximity/linkloss.h
    proximity/main.c
    proximity/manager.c
    proximity/manager.h
    proximity/monitor.c
    proximity/monitor.h
    proximity/reporter.c
    proximity/reporter.h
    sap/main.c
    sap/manager.c
    sap/manager.h
    sap/sap-dummy.c
    sap/sap-u8500.c
    sap/sap.h
    sap/server.c
    sap/server.h
    sbc/formats.h
    sbc/sbc.c
    sbc/sbc.h
    sbc/sbc_math.h
    sbc/sbc_primitives.c
    sbc/sbc_primitives.h
    sbc/sbc_primitives_armv6.c
    sbc/sbc_primitives_armv6.h
    sbc/sbc_primitives_iwmmxt.c
    sbc/sbc_primitives_iwmmxt.h
    sbc/sbc_primitives_mmx.c
    sbc/sbc_primitives_mmx.h
    sbc/sbc_primitives_neon.c
    sbc/sbc_primitives_neon.h
    sbc/sbc_tables.h
    sbc/sbcdec.c
    sbc/sbcenc.c
    sbc/sbcinfo.c
    sbc/sbctester.c
    serial/main.c
    serial/manager.c
    serial/manager.h
    serial/port.c
    serial/port.h
    serial/proxy.c
    serial/proxy.h
    src/adapter.c
    src/adapter.h
    src/agent.c
    src/agent.h
    src/attio.h
    src/attrib-server.c
    src/attrib-server.h
    src/builtin.h
    src/dbus-common.c
    src/dbus-common.h
    src/device.c
    src/device.h
    src/eir.c
    src/eir.h
    src/error.c
    src/error.h
    src/event.c
    src/event.h
    src/glib-helper.c
    src/glib-helper.h
    src/hcid.h
    src/log.c
    src/log.h
    src/main.c
    src/manager.c
    src/manager.h
    src/oob.c
    src/oob.h
    src/oui.c
    src/oui.h
    src/plugin.c
    src/plugin.h
    src/ppoll.h
    src/rfkill.c
    src/sdp-client.c
    src/sdp-client.h
    src/sdp-xml.c
    src/sdp-xml.h
    src/sdpd-database.c
    src/sdpd-request.c
    src/sdpd-server.c
    src/sdpd-service.c
    src/sdpd.h
    src/storage.c
    src/storage.h
    src/textfile.c
    src/textfile.h
    src/uinput.h
    test/agent.c
    test/attest.c
    test/avtest.c
    test/bdaddr.c
    test/btiotest.c
    test/gaptest.c
    test/hciemu.c
    test/hstest.c
    test/ipctest.c
    test/l2test.c
    test/lmptest.c
    test/mpris-player.c
    test/rctest.c
    test/scotest.c
    test/sdptest.c
    test/test-textfile.c
    test/uuidtest.c
    thermometer/main.c
    thermometer/manager.c
    thermometer/manager.h
    thermometer/thermometer.c
    thermometer/thermometer.h
    time/main.c
    time/server.c
    time/server.h
    tools/avctrl.c
    tools/avinfo.c
    tools/bccmd.c
    tools/ciptool.c
    tools/csr.c
    tools/csr.h
    tools/csr_3wire.c
    tools/csr_bcsp.c
    tools/csr_h4.c
    tools/csr_hci.c
    tools/csr_usb.c
    tools/dfu.c
    tools/dfu.h
    tools/dfubabel.c
    tools/dfutool.c
    tools/hciattach.c
    tools/hciattach.h
    tools/hciattach_ath3k.c
    tools/hciattach_intel.c
    tools/hciattach_qualcomm.c
    tools/hciattach_st.c
    tools/hciattach_ti.c
    tools/hciattach_tialt.c
    tools/hciconfig.c
    tools/hcieventmask.c
    tools/hcisecfilter.c
    tools/hcitool.c
    tools/hid2hci.c
    tools/kword.c
    tools/kword.h
    tools/l2ping.c
    tools/lexer.c
    tools/parser.c
    tools/parser.h
    tools/ppporc.c
    tools/rfcomm.c
    tools/sdptool.c
    tools/ubcsp.c
    tools/ubcsp.h
    unit/test-eir.c
    config.h)

add_executable(bluez_4_101 ${SOURCE_FILES})